Fixes tool box alignment issues.

--- a/src/Editor/Util/ToolButton/_toolbutton.scss
+++ b/src/Editor/Util/ToolButton/_toolbutton.scss
@@ -28,8 +28,8 @@
   border: none;
   color: $interface-secondary-text;
   margin: 0 auto;
-  margin-top: 6px;
   transition: .3s;
+  margin-top: 4px;
 }
 
 .tool-button:hover {
