--- a/src/Editor/_editor.scss
+++ b/src/Editor/_editor.scss
@@ -48,7 +48,7 @@ body {
 #tool-box-container {
   height: 100%;
   width: $tool-box-width;
-  background-color: #000;
+  background-color: $interface-primary;
   display: inline-block;
 }
 
